Card spacing fixed, banner added

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,50 @@
 // Specific CSS for your home-page
+body {
+  background-color: #425045;
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  font-weight: bolder;
+}
+
+.container {
+  background-color: #2b332d;
+  padding: 50px 0px;
+  height: 900px;
+  width: 100%;
+}
+
+.cocktail-master {
+  text-align: center;
+  margin-left: 30px;
+}
+
+.cocktail-list div {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  margin-bottom: 30px;
+  align-items: center;
+}
+
+.cocktail-card {
+  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  height: 180px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.623);
+  margin-right: 40px;
+}
+
+.new-cocktail-button {
+  margin-top: 100px;
+  text-align: center;
+}
